crates/widgets/src/overlay/snapshots/widgets__overlay__jump_to_time__tests__jump_to_time_overlay_shows_error_line_for_malformed_input.snap
---
source: crates/widgets/src/overlay/jump_to_time.rs
assertion_line: 89
expression: "painted(&overlay, 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ╭ JUMP TO TIME ─────────────────────────────────────────────────╮       "
"        │ > abc                                                         │       "
"        │ not a valid time (use m:ss, mm:ss, h:mm:ss, or plain seconds) │       "
"        │ Enter jump · Esc cancel                                       │       "
"        ╰───────────────────────────────────────────────────────────────╯       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
