crates/widgets/src/overlay/snapshots/widgets__overlay__jump_to_time__tests__jump_to_time_overlay_shows_title_input_and_hint.snap
---
source: crates/widgets/src/overlay/jump_to_time.rs
assertion_line: 73
expression: "painted(&overlay, 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ╭ JUMP TO TIME ─────────────────────────────────────────────────╮       "
"        │ > 1:05                                                        │       "
"        │ Enter jump · Esc cancel                                       │       "
"        ╰───────────────────────────────────────────────────────────────╯       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
